# basic_tvm

./: LICENSE  README.md  pyproject.toml
src/: manage.py
src/tvm/: asgi.py  settings.py  urls.py  wsgi.py
src/tvmserver/: admin.py  apps.py  models.py  serializers.py  utils.py  views.py
src/tvmserver/migrations/: 0001_initial.py
tests/: test_tvm.py
